test/library/standard/Map/testInitGenericError2.good
testInitGenericError2.chpl:7: warning: creating a map with value type C
testInitGenericError2.chpl:7: warning: which is a class type with generic management
testInitGenericError2.chpl:7: error: map value type cannot currently be generic
