test/library/standard/Map/testInitGenericError2.chpl
use Map;

class C {
  var x = 10;
}

var l = new map(int, C);  // C has generic management
writeln(l);
